Fix `DashboardPage` causing the rest of the page to overflow

--- a/src/components/pages/DashboardPage.module.scss
+++ b/src/components/pages/DashboardPage.module.scss
@@ -1,4 +1,6 @@
 .content {
   display: grid;
   grid-template-columns: auto 1fr;
+
+  overflow: hidden;
 }
